WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38491
Interpreter crashes due to incorrect refcounting of cached structures.
https://bugs.webkit.org/show_bug.cgi?id=38491
Summary
Interpreter crashes due to incorrect refcounting of cached structures.
Oliver Hunt
Reported
2010-05-03 15:04:12 PDT
Interpreter crashes due to incorrect refcounting of cached structures.
Attachments
Patch
(5.56 KB, patch)
2010-05-03 15:06 PDT
,
Oliver Hunt
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-05-03 15:06:05 PDT
Created
attachment 54964
[details]
Patch
Maciej Stachowiak
Comment 2
2010-05-03 15:11:27 PDT
<
rdar://problem/7926160
>
Maciej Stachowiak
Comment 3
2010-05-03 15:12:54 PDT
Comment on
attachment 54964
[details]
Patch r=me Please mention the Radar bug number in the ChangeLog.
Oliver Hunt
Comment 4
2010-05-03 15:19:15 PDT
Committed
r58705
: <
http://trac.webkit.org/changeset/58705
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug