2010-05-03  Oliver Hunt  <oliver@apple.com>

Reviewed by Maciej Stachowiak.

        Interpreter crashes due to incorrect refcounting of cached structures.
        https://bugs.webkit.org/show_bug.cgi?id=38491
        rdar://problem/7926160

        Make sure we ref/deref structures used for cached custom property getters

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::derefStructures):
        (JSC::CodeBlock::refStructures):
2010-05-03  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Interpreter crashes due to incorrect refcounting of cached structures.
        https://bugs.webkit.org/show_bug.cgi?id=38491

        Add test for cached structure chains used for custom getters.

        * fast/js/pic/cached-named-property-getter.html:

git-svn-id: svn://svn.chromium.org/blink/trunk@58705 bbb929c8-8fbe-4397-9dbb-9b2b20218538